* Add API for Mapset. * Remove unused indexName from models. * Update search for APIs to work with terminology and API parameters. * Update unit tests.